# prototype

./: LICENSE  Prototype.cabal  README.md  prototype.cabal  stack.yaml
src/: Proto3.hs
