name:                Prototype
version:             0.1.0.0
synopsis:            Protobuf3 for hs
description:         Please see README.md
homepage:            http://github.com/topos-house/prototype
license:             BSD3
license-file:        LICENSE
author:              Sebastian Zany, Joseph Cox
maintainer:          abovemind@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Proto3
  build-depends:       base >= 4.7 && < 5
                     , parsec 
  default-language:    Haskell2010

test-suite proto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/topos-house/prototype
